//
//  OnboardModel.swift
//  MyPets
//
//  Created by Дмитрий Ахмеров on 03.08.2021.
//

import Foundation

/// Модель данных для экрана обучения
struct OnboardModel {

	/// Название изображений
	let imageNameList = [
		"onboardImage_1",
		"onboardImage_2",
		"onboardImage_3",
		"onboardImage_4"
	]

	/// Описание страниц обучения
	let descriptionList = [
		"Следите за погодными условиями прямо в приложении",
		"Вся информация о питомце всегда под рукой",
		"Выбирайте, куда сходить с любимым питомцем",
		"Получите Premium для снятия ограничений"
	]
}
